Jumping between sections can be frustrating at times. This is due to the dynamic size of the header sections. A simple approach is to use a fixed a anchor and jump to that.
#5413

--- a/waltz-ng/client/dynamic-section/components/dynamic-sections-view/waltz-dynamic-sections-view.scss
+++ b/waltz-ng/client/dynamic-section/components/dynamic-sections-view/waltz-dynamic-sections-view.scss
@@ -61,6 +61,6 @@
 .waltz-page-top-anchor {
     display: block;
     position: relative;
-    top: -120px;
+    top: -130px;
     visibility: hidden;
 }
